--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <script type="text/javascript" data-main="js/main" src="js/lib/require.js"></script>
 </head>
 <body>
-<div id="current-conditions">Loading...</div>
-<div id="forecast">Loading...</div>
+<a href="#current">Current Weather</a>
+<a href="#forecast">7 day Forecast</a>
+<h1 id="loading-message">Your data is on its way!</h1>
+<div id="current-conditions" style="display: none"></div>
+<div id="forecast" style="display: none"></div>
 </body>
 </html>
