Added 48 Hour Forecast View

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 </head>
 <body>
 <a href="#current">Current Weather</a>
-<a href="#forecast">7 day Forecast</a>
+<a href="#daily-forecast">7 day Forecast</a>
+<a href="#hourly-forecast">48 Hour Forecast</a>
+
 <h1 id="loading-message">Your data is on its way!</h1>
+
 <div id="current-conditions" style="display: none"></div>
-<div id="forecast" style="display: none"></div>
+<div id="daily-forecast" style="display: none"></div>
+<div id="hourly-forecast" style="display: none"></div>
 </body>
 </html>
