Added handlebars templating

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta name="google" value="notranslate">
   <title>Weather or Not!</title>
+  <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" charset="utf-8">
   <script type="text/javascript" data-main="js/main" src="js/lib/require.js"></script>
 </head>
 <body>
