--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" charset="utf-8">
   <script type="text/javascript" data-main="js/main" src="js/lib/require.js"></script>
 </head>
-<body>
+<body class="container">
 <a href="#current">Current Weather</a>
 <a href="#daily-forecast">7 day Forecast</a>
 <a href="#hourly-forecast">48 Hour Forecast</a>
